--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI (FHIR Validation)
+name: SUSHI build + FHIR validation
 
 # Controls when the action will run. 
 on:
@@ -17,7 +17,7 @@ on:
 jobs:
 
   # Validate all resources using Firely Terminal 
-  CI_FHIR_VALIDATION:
+  build-validation:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
@@ -33,7 +33,7 @@ jobs:
         with:
           PATH_TO_CONFORMANCE_RESOURCES: Resources/fsh-generated/resources/
           PATH_TO_EXAMPLES: Resources/fsh-generated/resources/
-          DOTNET_VALIDATION_ENABLED: true
+          DOTNET_VALIDATION_ENABLED: false
           JAVA_VALIDATION_ENABLED: true
           OUTPUT_FORMAT: RAW
           JAVA_VALIDATION_OPTIONS: -allow-example-urls true
