--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "devDependencies": null,
     "canonicals": null,
     "dependencies": {
-        "de.basisprofil.r4": "1.1.0",
-        "de.gematik.isik-basismodul": "1.0.2"
+        "de.basisprofil.r4": "1.1.0"
     }
 }
