--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           SIMPLIFIER_USERNAME: ${{ secrets.SIMPLIFIER_USERNAME }}
           SIMPLIFIER_PASSWORD: ${{ secrets.SIMPLIFIER_PASSWORD }}
           SUSHI_ENABLED: true
-          SUSHI_OPTIONS: Resources/
+          SUSHI_OPTIONS: Resources/ -d
           EXPECTED_FAILS: VALIDATION_CONFORMANCE_JAVA
 
       - name: Add & Commit
