--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,14 +35,14 @@ jobs:
           # PATH_TO_EXAMPLES: Examples # Examples still need to be separated from the conformance resources 
           # PATH_TO_QUALITY_CONTROL_RULES: qc/custom
           DOTNET_VALIDATION_ENABLED: true
-          JAVA_VALIDATION_ENABLED: false
+          JAVA_VALIDATION_ENABLED: true
           OUTPUT_FORMAT: RAW
           # JAVA_VALIDATION_OPTIONS: -allow-example-urls true
           SIMPLIFIER_USERNAME: ${{ secrets.SIMPLIFIER_USERNAME }}
           SIMPLIFIER_PASSWORD: ${{ secrets.SIMPLIFIER_PASSWORD }}
           SUSHI_ENABLED: true
-          SUSHI_OPTIONS: Resources/ -d
-          EXPECTED_FAILS: VALIDATION_CONFORMANCE_JAVA VALIDATION_CONFORMANCE_DOTNET
+          SUSHI_OPTIONS: Resources/
+          EXPECTED_FAILS: VALIDATION_CONFORMANCE_JAVA
 
       - name: Add & Commit
         uses: EndBug/add-and-commit@v7
