--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -6,4 +6,4 @@ id: Implementierungsleitfaden ISiK-Modul Vitalwerte und Körpermaße
 name: Implementierungsleitfaden ISiK-Modul Vitalwerte und Körpermaße
 status: draft
 dependencies:
-  de.basisprofil.r4: 1.1.0
+  de.basisprofil.r4: 1.2.0-alpha2
