--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "devDependencies": null,
     "canonicals": null,
     "dependencies": {
-        "de.basisprofil.r4": "1.2.0-alpha2"
+        "de.basisprofil.r4": "1.2.0"
     }
 }
