test: Set examples path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         uses: FirelyTeam/firely-terminal-pipeline@v0.3.2
         with:
           PATH_TO_CONFORMANCE_RESOURCES: Resources/fsh-generated/resources/
-          # PATH_TO_EXAMPLES: Examples # Examples still need to be separated from the conformance resources 
+          PATH_TO_EXAMPLES: Resources/fsh-generated/resources/ # Examples still need to be separated from the conformance resources 
           # PATH_TO_QUALITY_CONTROL_RULES: qc/custom
           DOTNET_VALIDATION_ENABLED: true
           JAVA_VALIDATION_ENABLED: true
