--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -7,3 +7,4 @@ name: Implementierungsleitfaden ISiK-Modul Vitalwerte und Körpermaße
 status: draft
 dependencies:
   de.basisprofil.r4: 1.2.0
+  de.gematik.isik-basismodul: 1.0.3
