--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "devDependencies": null,
     "canonicals": null,
     "dependencies": {
-        "de.basisprofil.r4": "1.2.0",
-        "de.gematik.isik-basismodul": "1.0.3"
+        "de.gematik.isik-basismodul": "2.0.0-ballot2"
     }
 }
