--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "de.gematik.isik-vitalparameter",
-    "version": "1.0.0 CC1",
+    "version": "2.0.0-ballot1",
     "description": "Package Release des ISiK Modul Vitalparameter",
     "author": null,
     "fhirVersions": [
