--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "devDependencies": null,
     "canonicals": null,
     "dependencies": {
+        "de.basisprofil.r4": "1.3.2",
         "de.gematik.isik-basismodul": "2.0.0-ballot2"
     }
 }
