add new canonical urls

--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -1,4 +1,4 @@
-canonical: https://gematik.de/fhir/ISiK
+canonical: https://gematik.de/fhir/isik/v2/VitalwerteUndKoerpermasse
 fhirVersion: 4.0.1
 FSHOnly: true
 applyExtensionMetadataToRoot: false
