--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -7,4 +7,4 @@ name: Implementierungsleitfaden ISiK-Modul Vitalwerte und Körpermaße
 status: draft
 dependencies:
   de.basisprofil.r4: 1.3.2
-  de.gematik.isik-basismodul: 2.0.0-ballot2
+  de.gematik.isik-basismodul: 2.0.0
