--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "canonicals": null,
     "dependencies": {
         "de.basisprofil.r4": "1.3.2",
-        "de.gematik.isik-basismodul": "2.0.0-ballot2"
+        "de.gematik.isik-basismodul": "2.0.0"
     }
 }
