--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "de.gematik.isik-vitalparameter",
-    "version": "2.0.3",
+    "version": "3.0.0-rc1",
     "description": "Package Release des ISiK Modul Vitalparameter",
     "fhirVersions": [
         "4.0.1"
