--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -1,10 +1,10 @@
-canonical: https://gematik.de/fhir/isik/v3/VitalwerteUndKoerpermasse
+canonical: https://gematik.de/fhir/isik/v3/VitalwerteUndKoerpermasze
 fhirVersion: 4.0.1
 FSHOnly: true
 applyExtensionMetadataToRoot: false
 id: Implementierungsleitfaden ISiK-Modul Vitalwerte und Körpermaße
 name: Implementierungsleitfaden ISiK-Modul Vitalwerte und Körpermaße
-status: draft
+status: active
 dependencies:
   de.basisprofil.r4: 1.4.0
-  de.gematik.isik-basismodul: 3.0.0-rc3
+  de.gematik.isik-basismodul: 3.0.0
