--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -5,6 +5,11 @@ applyExtensionMetadataToRoot: false
 id: Implementierungsleitfaden ISiK-Modul Vitalwerte und Körpermaße
 name: Implementierungsleitfaden ISiK-Modul Vitalwerte und Körpermaße
 status: active
+version: 3.0.0
+publisher:
+  name: gematik GmbH
+  url: https://www.gematik.de/
+  email: ISiK@gematik.de
 dependencies:
   de.basisprofil.r4: 1.4.0
   de.gematik.isik-basismodul: 3.0.0
