--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "de.gematik.isik-vitalparameter",
-    "version": "3.0.0-rc2",
-    "description": "Package Release des ISiK Modul Vitalparameter",
+    "version": "3.0.0",
+    "description": "Package Release des ISiK Modul Vitalparameter und Körpermaße",
     "fhirVersions": [
         "4.0.1"
     ],
     "dependencies": {
         "de.basisprofil.r4": "1.4.0",
-        "de.gematik.isik-basismodul": "3.0.0-rc3"
+        "de.gematik.isik-basismodul": "3.0.0"
     }
 }
