--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -1,9 +1,9 @@
-canonical: https://gematik.de/fhir/isik/v3/VitalwerteUndKoerpermasze
+canonical: https://gematik.de/fhir/isik/v3/VitalparameterUndKoerpermasze
 fhirVersion: 4.0.1
 FSHOnly: true
 applyExtensionMetadataToRoot: false
-id: Implementierungsleitfaden ISiK-Modul Vitalwerte und Körpermaße
-name: Implementierungsleitfaden ISiK-Modul Vitalwerte und Körpermaße
+id: Implementierungsleitfaden ISiK-Modul Vitalparameter und Körpermaße
+name: Implementierungsleitfaden ISiK-Modul Vitalparameter und Körpermaße
 status: active
 version: 3.0.0
 publisher:
