--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -3,5 +3,5 @@ fhirVersion: 4.0.1
 FSHOnly: true
 applyExtensionMetadataToRoot: false
 dependencies:
-  de.basisprofil.r4: 1.4.0
+  de.basisprofil.r4: 1.5.0-alpha1
   de.gematik.isik-basismodul: 3.0.0
