--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -11,5 +11,5 @@ publisher:
   url: https://www.gematik.de/
   email: ISiK@gematik.de
 dependencies:
-  de.basisprofil.r4: 1.4.0
+  de.basisprofil.r4: 1.5.0-alpha2
   de.gematik.isik-basismodul: 3.0.0
