--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "de.gematik.isik-vitalparameter",
-    "version": "3.0.1",
+    "version": "4.0.0-rc",
     "description": "Package Release des ISiK Modul Vitalparameter und Körpermaße",
     "fhirVersions": [
         "4.0.1"
