--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "4.0.1"
   ],
   "dependencies": {
-    "de.basisprofil.r4": "1.5.0-alpha6",
+    "de.basisprofil.r4": "1.5.0-ballot",
     "de.gematik.isik-basismodul": "3.0.1"
   }
 }
