--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -1,7 +1,7 @@
-canonical: https://gematik.de/fhir/isik/v3/VitalparameterUndKoerpermasze
+canonical: https://gematik.de/fhir/isik
 fhirVersion: 4.0.1
 FSHOnly: true
 applyExtensionMetadataToRoot: false
 dependencies:
-  de.basisprofil.r4: 1.5.0-ballot
+  de.basisprofil.r4: 1.5.0-alpha9
   de.gematik.isik-basismodul: 3.0.1
