--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -3,5 +3,5 @@ fhirVersion: 4.0.1
 FSHOnly: true
 applyExtensionMetadataToRoot: false
 dependencies:
-  de.basisprofil.r4: 1.5.0-alpha10
-  de.gematik.isik-basismodul: 3.0.3
+  de.basisprofil.r4: 1.5.0-ballot2
+  de.gematik.isik-basismodul: 4.0.0-rc
