--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "4.0.1"
   ],
   "dependencies": {
-    "de.basisprofil.r4": "1.5.0-alpha10",
-    "de.gematik.isik-basismodul": "3.0.1"
+    "de.basisprofil.r4": "1.5.0-ballot2",
+    "de.gematik.isik-basismodul": "4.0.0-rc"
   }
 }
