--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -4,4 +4,4 @@ FSHOnly: true
 applyExtensionMetadataToRoot: false
 dependencies:
   de.basisprofil.r4: 1.5.0-ballot2
-  de.gematik.isik-basismodul: 4.0.0-rc
+  de.gematik.isik-basismodul: 4.0.0-rc2
