--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,13 @@ name: CI (FHIR Validation)
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    paths:
+    - 'Resources/**'
+    branches-ignore:
+    - 'main**'
   pull_request:
-    branches: [ master ]
+    branches:
+    - 'main**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -24,28 +28,31 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         
       # Java and .NET are already installed on ubuntu-latest
         
       - name: Firely.Terminal (GitHub Actions)
-        uses: FirelyTeam/firely-terminal-pipeline@v0.3.5
+        uses: FirelyTeam/firely-terminal-pipeline@v0.4.1
         with:
           PATH_TO_CONFORMANCE_RESOURCES: Resources/fsh-generated/resources/
-          # PATH_TO_EXAMPLES: Examples # Examples still need to be separated from the conformance resources 
+          #PATH_TO_EXAMPLES: Examples
           # PATH_TO_QUALITY_CONTROL_RULES: qc/custom
           DOTNET_VALIDATION_ENABLED: true
           JAVA_VALIDATION_ENABLED: true
           OUTPUT_FORMAT: RAW
-          # JAVA_VALIDATION_OPTIONS: -allow-example-urls true
+          JAVA_VALIDATION_OPTIONS: -allow-example-urls true
           SIMPLIFIER_USERNAME: ${{ secrets.SIMPLIFIER_USERNAME }}
           SIMPLIFIER_PASSWORD: ${{ secrets.SIMPLIFIER_PASSWORD }}
           SUSHI_ENABLED: true
           SUSHI_OPTIONS: Resources/
-          EXPECTED_FAILS: VALIDATION_CONFORMANCE_JAVA VALIDATION_CONFORMANCE_DOTNET
+          SUSHI_VERSION: 3.8.0
+          EXPECTED_FAILS: VALIDATION_CONFORMANCE_DOTNET VALIDATION_CONFORMANCE_JAVA VALIDATION_EXAMPLES_JAVA
 
       - name: Add & Commit
-        uses: EndBug/add-and-commit@v7
+        uses: EndBug/add-and-commit@v9
         with:
+          committer_name: GitHub Actions Bot
+          committer_email: ActionBot@github.com
           add: 'Resources/fsh-generated/resources/'
-
+          message: auto-generated FHIR files by GitHub Actions (CI FSH to FHIR Validation)
