--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "de.gematik.isik-vitalparameter",
-  "version": "4.0.0-rc2",
+  "version": "4.0.0",
   "description": "Package Release des ISiK Modul Vitalparameter und Körpermaße",
   "fhirVersions": [
     "4.0.1"
   ],
   "dependencies": {
-    "de.basisprofil.r4": "1.5.0-ballot3",
-    "de.gematik.isik-basismodul": "4.0.0-rc3"
+    "de.basisprofil.r4": "1.5.0",
+    "de.gematik.isik-basismodul": "4.0.0"
   }
 }
